# SLAM

./: .bashrc  .gitignore  3_tb4_yolov8_obj_det.py  5_tb4_yolov8_obj_det_track.py  CMakeLists.txt  README.md  depth_checker.py  nav_to_pose.py  package.xml  setup.py
image_integration/: integration.py  labeling.py
image_integration/images_split/: data.yaml
image_integration/images_split/test/labels/: img1_img_11.txt  (+45 more)
image_integration/img1_split/: data.yaml
image_integration/img2_split/: data.yaml
image_integration/img3_split/: data.yaml
image_integration/img4_split/: data.yaml
image_integration/img5_split/: data.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: tb4_combined.launch.py
log/: latest_build
msg/: Anomalyreport.msg
rokey_pjt/: 1_1_tb4_yolov8_obj_det.py  1_2_tb4_yolov8_obj_det_thread.py  1_3_tb4_yolov8_obj_det_track.py  3_tb4_yolo_bbox_depth_checker.py  3_tb4_yolov8_bbox_depth_checker.py  3_tb4_yolov8_obj_det.py  4_2_tb4_yolo_depth_tf_rviz.py  4_tb4_yolov8_obj_det_thread.py  5_1_sc_nav_to_pose.py  5_2_sc_nav_through_poses.py  5_3_sc_follow_waypoints.py  5_3_tb4_follow_waypoints.py  5_tb4_yolov8_obj_det_track.py  depth_checker.py  depth_checker_mouse_click.py  final_tf_transform_service.py  follow_waypoints.py  image_viewer.py  image_viewer_back.py  nav_through_poses.py  publish_err.py  subscirbe_err copy.py  subscribe_err.py  subscribe_test.py  tf_point_transform.py  yolo_depth_tf.py  yolo_depth_tf_rviz.py  yolo_depth_tf_rviz_remake.py  yolo_depth_tf_rviz_remake_seperate.py
yolov8/: 3_dataset_splitter.py
(+894 files in other folders)
